[package]
name = "paperscraper"
version = "0.0.0"
authors = ["Carsten Jørgensen <carsten@kragelund.dev>"]
edition = "2018"
description = """
A webscraper to automatically download wallpapers from various sources.
"""
documentation = "https://github.com/nyxiative/paperscraper"
readme = "README.md"
homepage = "https://github.com/nyxiative/paperscraper"
repository = "https://github.com/nyxiative/paperscraper"
license = "WTFPL"
keywords = ['webscraper', "wallpapers"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
